--- a/css.css
+++ b/css.css
@@ -1,3 +1,17 @@
 body {
     background-color: red;
 }
+
+.main_navi a {
+    background-color: rgb(133, 158, 249);
+    padding: 0.25vw;
+    text-decoration: none;
+    color: white;
+    font-weight: 800;
+    border-radius: 0.25vw;
+}
+
+.active {
+    background-color: yellow !important;
+    color: red !important;
+}
